--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CaseType/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CaseType/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="secnavs fixed">
     <div class="pull-left">
         <ul class="secnav">
-            <li>@Html.ActionLink(Translation.Get("Lägg till", Enums.TranslationSource.TextTranslation) + " " + Translation.Get("Ärendetyp", Enums.TranslationSource.TextTranslation), "new", new { customerId = Model.Customer.Id }, new { @class = "btn" })</li>
+            <li>@Html.ActionLink(Translation.GetCoreTextTranslation("Lägg till") + " " + Translation.GetCoreTextTranslation("Ärendetyp"), "new", new { customerId = Model.Customer.Id }, new { @class = "btn" })</li>
         </ul>
     </div>
     @Html.Partial("_MasterDataPanel", Model.Customer)
@@ -18,26 +18,29 @@
 <div class="content case-type admin">
     <div class="container">
         <ul class="nav nav-tabs" id="myTab">
-            <li class="active"><a href="#fragment-1">@Translation.Get("Ärendetyp", Enums.TranslationSource.TextTranslation) - @Model.Customer.Name</a></li>
+            <li class="active"><a href="#fragment-1">@Translation.GetCoreTextTranslation("Ärendetyp") - @Model.Customer.Name</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane tab-pane-border active" id="fragment-1">
-                <span>@Translation.Get("Visa endast aktiva")</span>
+                <span>@Translation.GetCoreTextTranslation("Visa endast aktiva")</span>
                 <input type="checkbox" class="switchcheckbox showonly-active" @(Model.IsShowOnlyActive ? "checked" : string.Empty)>
                 <table class="table table-striped table-bordered table-hover" id="tblcasetype">
                     <thead>
                         <tr>
                             <th>
-                                @Translation.Get("Ärendetyp", Enums.TranslationSource.TextTranslation)
+                                @Translation.GetCoreTextTranslation("Ärendetyp")
                             </th>
                             <th>
-                                @Translation.Get("Standard", Enums.TranslationSource.TextTranslation)
+                                @Translation.GetCoreTextTranslation("Standard")
                             </th>
                             <th>
-                                @Translation.Get("Kräver godkännande", Enums.TranslationSource.TextTranslation)
+                                @Translation.GetCoreTextTranslation("Kräver godkännande")
                             </th>
                             <th>
-                                @Translation.Get("Aktiv", Enums.TranslationSource.TextTranslation)
+                                @Translation.GetCoreTextTranslation("Handläggare")
+                            </th>
+                            <th>
+                                @Translation.GetCoreTextTranslation("Aktiv")
                             </th>
                         </tr>
                     </thead>
