--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/StateSecondary/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/StateSecondary/Index.cshtml
@@ -17,49 +17,59 @@
 <div class="content stateSecondary admin">
     <div class="container">
         <ul class="nav nav-tabs" id="myTab">
-            <li class="active"><a href="#fragment-1">@Translation.Get("Understatus", Enums.TranslationSource.TextTranslation) - @Model.Customer.Name</a></li>
+            <li class="active"><a href="#fragment-1">@Translation.GetCoreTextTranslation("Understatus") - @Model.Customer.Name</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane tab-pane-border active" id="fragment-1">
-                <span>@Translation.Get("Visa endast aktiva")</span>
+                <span>@Translation.GetCoreTextTranslation("Visa endast aktiva")</span>
                 <input type="checkbox" class="switchcheckbox showonly-active" @(Model.IsShowOnlyActive ? "checked" : string.Empty)>
                 <table class="table table-striped table-bordered table-hover" id="tblstatesecondary">
                     <thead>
                         <tr>
                             <th>
-                                @Translation.Get("Understatus", Enums.TranslationSource.TextTranslation)
+                                @Translation.GetCoreTextTranslation("Understatus")
                             </th>
                             <th>
-                                @Translation.Get("Inkludera i ärendestatistik", Enums.TranslationSource.TextTranslation)
+                                @Translation.GetCoreTextTranslation("Inkludera i ärendestatistik")
                             </th>
                             <th>
-                                @Translation.Get("Standard", Enums.TranslationSource.TextTranslation)
+                                @Translation.GetCoreTextTranslation("Standard")
                             </th>
                             <th>
-                                @Translation.Get("Aktiv", Enums.TranslationSource.TextTranslation)
+                                @Translation.GetCoreTextTranslation("Driftgrupp")
+                            </th>
+                            <th>
+                                @Translation.GetCoreTextTranslation("Aktiv")
                             </th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model.StateSecondaries)
                         {
-                            var isInactive = item.IsActive == 0; 
-                            
+                            var isInactive = item.IsActive == 0;
+                            var wgName = string.Empty;
+                            if (item.WorkingGroup != null)
+                            {
+                                wgName = item.WorkingGroup.WorkingGroupName;
+                            }
                             <tr class="@(isInactive?"inactive":"")">
                                 <td>
                                     <a href="@Url.Action("edit", "statesecondary", new { area = "admin", id = item.Id })">@Html.DisplayFor(modelItem => item.Name)</a>
                                 </td>
                                 <td>
                                     <a href="@Url.Action("edit", "statesecondary", new { area = "admin", id = item.Id })">
-                                        @Translation.Get(item.IncludeInCaseStatistics.TranslateBit(), Enums.TranslationSource.TextTranslation)</a>
+                                        @Translation.GetCoreTextTranslation(item.IncludeInCaseStatistics.TranslateBit())</a>
+                                </td>
+                                <td>
+                                    <a href="@Url.Action("edit", "statesecondary", new {area = "admin", id = item.Id})">
+                                        @Translation.GetCoreTextTranslation(item.IsDefault.TranslateBit())</a>
+                                </td>
+                                <td>
+                                    <a href="@Url.Action("edit", "statesecondary", new { area = "admin", id = item.Id })">@wgName</a>
                                 </td>
                                 <td>
                                     <a href="@Url.Action("edit", "statesecondary", new { area = "admin", id = item.Id })">
-                                        @Translation.Get(item.IsDefault.TranslateBit(), Enums.TranslationSource.TextTranslation)</a>
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("edit", "statesecondary", new { area = "admin", id = item.Id })">
-                                        @Translation.Get(item.IsActive.TranslateBit(), Enums.TranslationSource.TextTranslation)</a>
+                                        @Translation.GetCoreTextTranslation(item.IsActive.TranslateBit())</a>
                                 </td>
                             </tr>
                         }
