--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_HeaderDialog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_HeaderDialog.cshtml
@@ -25,7 +25,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <span>@Translation.GetCoreTextTranslation("Vi ändring av ärende")</span>
+                                <span>@Translation.GetCoreTextTranslation("Vid ändring av ärende")</span>
                             </td>
                             <td>
                                 <select id="isEditCollapsed">
