--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/Index.cshtml
@@ -35,7 +35,7 @@
                                 @Translation.GetCoreTextTranslation("Prioritet")
                             </th>
                             <th>
-                                @Translation.GetCoreTextTranslation("Ärendetyp")
+                                @Translation.GetCoreTextTranslation("Visa endast för") @Translation.GetCoreTextTranslation("Ärendetyp")
                             </th>
                             <th>
                                 @Translation.GetCoreTextTranslation("Aktiv")
