[FIX] Some fixes

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_CaseAddFollowers.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_CaseAddFollowers.cshtml
@@ -8,7 +8,7 @@
     $(function() {
         document.parameters = {
             emailNotValid: '@Translation.GetForJS("E-postadress är inte giltig.")',
-            emailAlreadyAdded: '@Translation.GetForJS("Samma e-post redan lagts.")',
+            emailAlreadyAdded: '@Translation.GetForJS("E-postadress redan tillagd.")',
             adminLabel: '@Translation.GetForJS("Handläggare")',
             emailLabel: '@Translation.GetForJS("E-postgrupp")',
             initLabel: '@Translation.GetForJS("Anmälare")',
