[FIX] Language shows two times in Action list

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/New.cshtml
@@ -139,7 +139,7 @@
                                                 var langNameId = "langItem" + lang.Id;
                                                 <li>
                                                                                                         
-                                                        <a id="@langNameId" class="langItem" href="#" onclick="ChangeCaseLanguageTo(@lang.Id,true);"> @Translation.Get(lang.Name) 
+                                                        <a id="@langNameId" class="langItem" href="#" onclick="ChangeCaseLanguageTo(@lang.Id,true);"> @Translation.GetCoreTextTranslation(lang.Name) 
                                                             @if (lang.Id == curLanguage) 
                                                             {
                                                               <i class='icon-ok'></i>
