[FIX] Report & Case Print

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Reports/AvgResolutionTime.rdl
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Reports/AvgResolutionTime.rdl
@@ -303,8 +303,10 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>=Globals!ExecutionTime</Value>
-                  <Style />
+                  <Value>=Now()</Value>
+                  <Style>
+                    <Format>yyyy-MM-dd</Format>
+                  </Style>
                 </TextRun>
               </TextRuns>
               <Style>
