--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_RowsOverview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_RowsOverview.cshtml
@@ -41,11 +41,11 @@
                 <td>
                     @if (Model != null && Model.Count() > 0)
                     {
-                        <input type="checkbox" onclick="test(this)" id="chkActive" @(Model.FirstOrDefault().IsShowOnlyActive ? "checked" : string.Empty)>
+                        <input type="checkbox" class="switchcheckbox" id="chkActive" @(Model.FirstOrDefault().IsShowOnlyActive ? "checked" : string.Empty)>
                     }
                     else
                     {
-                        <input type="checkbox" onclick="test(this)" id="chkActive" false : string.Empty)>
+                        <input type="checkbox" class="switchcheckbox" id="chkActive">
                     }
                     @* <input type="checkbox" onclick="test(this)" id="chkActive">*@
 
@@ -136,6 +136,17 @@
 </div>
 
 <script type="text/javascript">
+    
+    $("#chkActive").on('switchChange.bootstrapSwitch', function () {
+        test();
+    });
+
+    $(document).ready(function () {
+        $("#chkActive").bootstrapSwitch("onColor", "success");
+        $("#chkActive").bootstrapSwitch("size", "small");
+        $("#chkActive").bootstrapSwitch("onText", '@Translation.GetForJS("Ja")');
+        $("#chkActive").bootstrapSwitch("offText", '@Translation.GetForJS("Nej")');
+    });
 
     function test(t) {
 
