[FIX] Change text on CustomerSettings + update Translation.sql

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
@@ -536,7 +536,7 @@
                                     </td>
                                     <td>
                                         <input type="radio" name="Setting.AttachmentPlacement" @(Model.Setting.AttachmentPlacement == 0 ? "checked='checked'" : "") id="Customer_Setting_AttachmentPlacement0" value="0" />
-                                        @Translation.Get("Visa på Case tab", Enums.TranslationSource.TextTranslation)
+                                        @Translation.Get("Visa på Ärende tab", Enums.TranslationSource.TextTranslation)
                                         <br />
                                         <input type="radio" name="Setting.AttachmentPlacement" @(Model.Setting.AttachmentPlacement == 1 ? "checked='checked'" : "") id="Customer_Setting_AttachmentPlacement1" value="1" />
                                         @Translation.Get("Visa på Bilagor tab", Enums.TranslationSource.TextTranslation)
