#58796 [FIX] The class print-case was on the view document button causing it to call pint-case function as well as showing the document

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseDocument.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseDocument.cshtml
@@ -18,7 +18,7 @@
                         @item.Name<text>.</text>@item.FileType
                     </td>
                     <td>
-                        <a href="/casedocument/CaseDocumentGet?caseDocumentGUID=@item.CaseDocumentGUID&caseId=@item.CaseId" target="_blank" title="@Translation.GetCoreTextTranslation("Skriv ut") @item.Name" class="btn print-case"><i class="icon-file"></i> @Translation.GetCoreTextTranslation("Skriv ut")</a>
+                        <a href="/casedocument/CaseDocumentGet?caseDocumentGUID=@item.CaseDocumentGUID&caseId=@item.CaseId" target="_blank" title="@Translation.GetCoreTextTranslation("Skriv ut") @item.Name" class="btn"><i class="icon-file"></i> @Translation.GetCoreTextTranslation("Skriv ut")</a>
                     </td>
                     <td></td>
                 </tr>
